--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 accompanistSystemuicontroller = "0.36.0"
 agp = "8.13.0"
-animationGraphics = "1.9.2"
+animationGraphics = "1.9.3"
 coilCompose = "2.7.0"
 firebaseAuthKtx = "23.2.1"
 hazeMaterials = "1.6.10"
@@ -13,14 +13,14 @@ espressoCore = "3.7.0"
 kotlinxSerializationJson = "1.9.0"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
-composeBom = "2025.09.01"
+composeBom = "2025.10.00"
 materialIconsExtended = "1.7.8"
 mathparserOrgMxparser = "6.1.0"
 navigationCompose = "2.9.5"
 appcompat = "1.7.1"
-#xenonCommons = "1.3.2"
+xenonCommons = "2.0.0"
 material3WindowSizeClassAndroid = "1.4.0"
-material3comp = "1.5.0-alpha04"
+material3comp = "1.5.0-alpha06"
 material3Adaptive = "1.0.0-alpha06"
 playServicesAuth = "21.4.0"
 reorderable = "3.0.0"
@@ -60,7 +60,7 @@ reorderable = { module = "sh.calvin.reorderable:reorderable", version.ref = "reo
 ui = { module = "androidx.compose.ui:ui" }
 ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
 ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
-#xenon-commons = { module = "com.github.Dinico414:Xenon-Commons", version.ref = "xenonCommons" }
+xenon-commons = { module = "com.github.Dinico414:Xenon-Commons", version.ref = "xenonCommons" }
 androidx-material3-window-size-class1-android = { group = "androidx.compose.material3", name = "material3-window-size-class-android", version.ref = "material3WindowSizeClassAndroid" }
 androidx-material3-adaptive = { group = "androidx.compose.material3", name = "material3-adaptive", version.ref = "material3Adaptive" }
 
